refactor(generation): refactor generation context and add more specialized reference nodes (#27)